# jellyash

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
jellyash/: bundle.py  cli.py  client.py  duration.py  nextup.py  search.py  series.py  token.py  unwatched.py
tests/: conftest.py  test_bundle.py  test_client.py  test_duration.py  test_nextup.py  test_search.py  test_token.py  test_unwatched.py
tests/cassettes/test_bundle/: TestApiResponse.client.yaml  TestApiResponse.setUp.yaml  TestUnwrappedApiResponse.client.yaml  TestUnwrappedApiResponse.test_unwrapped_bool_response.yaml  TestUnwrappedApiResponse.test_unwrapped_response.yaml
tests/cassettes/test_client/: TestAuthedClient.client.yaml  TestAuthedClient.test_authed_client.yaml  TestClient.test_auth_with_password.yaml
tests/cassettes/test_duration/: TestDuration.client.yaml  TestDuration.test_calculate_duration.yaml  TestDuration.test_calculate_duration_not_found.yaml
tests/cassettes/test_nextup/: TestEpisodeStr.client.yaml  TestEpisodeStr.test_episode_str.yaml
tests/cassettes/test_search/: TestSearch.test_multiple_terms_exact.yaml  TestSearch.test_multiple_terms_exact_with_space.yaml  TestSearch.test_multiple_terms_not_exact.yaml  TestSearch.test_single_term.yaml  TestSearch.test_term_not_found.yaml
tests/cassettes/test_token/: TestCreateJellyfinToken.test_create_token.yaml
tests/cassettes/test_unwatched/: TestUnwatched.client.yaml  TestUnwatched.test_all_unwatched.yaml  TestUnwatched.test_specific_unwatched.yaml  TestUnwatched.test_specific_unwatched_not_found.yaml  TestUnwatched.test_specific_unwatched_unknown_season.yaml  TestUnwatched.test_specific_unwatched_unknown_special_season.yaml  TestUnwatched.test_specific_unwatched_with_season.yaml
