[build-system]
requires = ["hatchling>=1.4.1"]
build-backend = "hatchling.build"

[project]
name = "jellyash"
dynamic = ["version"]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.7"
dependencies = [
    "jellyfin_apiclient_python",
    "typing_extensions;python_version<'3.11'",
]

[project.scripts]
average_duration = "jellyash.duration:average_duration"
create_jellyfin_token = "jellyash.token:create_jellyfin_token"
nextup = "jellyash.nextup:nextup"
unwatched = "jellyash.unwatched:unwatched"

[tool.hatch.version]
path = "jellyash/__init__.py"

[tool.ruff]
line-length=77
